--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@ h1 {text-align: center;}
     <meta charset="utf-8">
     <title>Home Alone</title>
 </style>
-	  </head>
-	  <body bgcolor="#FF8533">
+</head>
+<body background = "" style="text-align:center" bgcolor="#FF8533">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
@@ -15,7 +15,8 @@ h1 {text-align: center;}
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
-    <h1>   Second day scratch project.</h1>
+    <h1> Project 1 </h1>
+    <img src = "images/Capture.png" height = "500">
     <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
     <br>
