--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@ h1 {text-align: center;}
     <img src="images/portfolio.jpg" height="250">
     <br>
     <h1> Project 1 </h1>
-    <img src = "images/Capture.png" height = "500">
+    <img src = "Images/Capture.png" height = "500">
     <h1> For my first project, I made a robot character which can jump over a boulder. If it reaches a certain point you'll be able to win. Some functions that we made for this game are the jump, move forward, or move backward functions. If you touch the boulder, you'll lose the game. </h1>
     <br>
     <h1>   Using App Inventor to make app game Duck Hunter.</h1>
