--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@ h1 {text-align: center;}
     <a href="aboutme.html">About Me</a>
     <a href="Ricardo.html">Ricardo here </a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="Images/portfolio.jpg" height="250">
     <br>
     <h1> Project 1 </h1>
     <img src = "Images/Capture.png" height = "500">
