--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@ h1 {text-align: center;}
     <h1> For my first project, I made a robot character which can jump over a boulder. If it reaches a certain point you'll be able to win. Some functions that we made for this game are the jump, move forward, or move backward functions. If you touch the boulder, you'll lose the game. </h1>
     <br>
     <h1> Project 2 </h1>
-    <img src = "Images/Project2.png" height = "500">
+    <img src = "Images/Project2.PNG" height = "500">
     <h1> For my second project, I made a two player game, where two octopi are in the ocean, and they have wands which let them shoot balls which bounce in the ocean. For every ball  you hit, you get more points, and there is a leaderboard at the end which shows the points of all teams in the top 5.</h1>
     <br>
     <h1>   Black Jack game written in Python.</h1>
