--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@ h1 {text-align: center;}
     <img src = "Images/Project2.PNG" height = "500">
     <h1> For my second project, I made a two player game, where two octopi are in the ocean, and they have wands which let them shoot balls which bounce in the ocean. For every ball  you hit, you get more points, and there is a leaderboard at the end which shows the points of all teams in the top 5.</h1>
     <br>
-    <h1>   Black Jack game written in Python.</h1>
+    <h1> Project 1: Robo Jump </h1>
+    <iframe src="https://scratch.mit.edu/projects/588226394/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <h1> For my third project in Scratch I did a platformer which has an octopus named little Timmy trying to escape an ocean which is becoming increasingly more polluted. The player uses Little Timmy to jump through various obstacles using the w, a, s and d keys or arrow keys, and the background changes with new levels.</h1>
     <br>
     <h1>   Modified bits in pictures.</h1>
     <br>
