--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,12 @@ h1 {text-align: center;}
     <iframe src="https://scratch.mit.edu/projects/588226394/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <h1> For my third project in Scratch I did a platformer which has an octopus named Riccardo trying to escape an ocean which is becoming increasingly more polluted. The player uses Riccardo to jump through various obstacles using the w, a, s and d keys or arrow keys, and the background changes with new levels.</h1>
     <br>
-    <h1>   Modified bits in pictures.</h1>
+    <h1> Project 4: Rover data </h1>
+    <img src = "Images/Project2.PNG" height = "500">
+    <h1> For my fourth project we analzed data from a rover, and I guessed marsh lands for the answer to the data.</h1>
     <br>
-    <h1>   Use data files to create graphs.</h1>
-    <br>
-    <h1>   Using netlogo do remix of illusions.</h1>
+
     <h1>   Interactive Fiction Rags to Riches.</h1>
-    <br>
+
 	  </body>
 	</html>
