--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ h1 {text-align: center;}
     <h1> For my third project in Scratch I did a platformer which has an octopus named Riccardo trying to escape an ocean which is becoming increasingly more polluted. The player uses Riccardo to jump through various obstacles using the w, a, s and d keys or arrow keys, and the background changes with new levels.</h1>
     <br>
     <h1> Project 4: Rover data </h1>
-    <img src = "Images/Marshlands.jpg" height = "500">
+    <img src = "Images/Marshlands.JPG" height = "500">
     <h1> For my fourth project we analzed data from a rover, and I guessed marsh lands for the answer to the data.</h1>
     <br>
 
