--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@ h1 {text-align: center;}
     <iframe src="https://scratch.mit.edu/projects/588226394/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     <h1> For my third project in Scratch I did a platformer which has an octopus named Riccardo trying to escape an ocean which is becoming increasingly more polluted. The player uses Riccardo to jump through various obstacles using the w, a, s and d keys or arrow keys, and the background changes with new levels.</h1>
     <br>
-    <h1> Project 4: Rover data </h1>
-    <img src = "Images/Marshlands.JPG" height = "500">
+    <h1> Project 4: Project Rover Phone Home </h1>
+    <img src = "" height = "500">
     <h1></h1>
     <br>
 
