--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@ h1 {text-align: center;}
     <br>
     <h1> Project 4: Project Rover Phone Home </h1>
     <img src = "" height = "500">
-    <img src = "" height = "500">
+    <img src = "Rover_graphs.PNG" height = "500">
     <img src = "" height = "500">
     <h1></h1>
     <br>
