--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,11 @@ h1 {text-align: center;}
     <br>
     <h1> Project 4: Project Rover Phone Home </h1>
     <img src = "Rover_data_graphs.PNG" height = "500">
+    <br>
     <img src = "Rover_graphs.PNG" height = "500">
+    <br>
     <img src = "" height = "500">
-    <h1></h1>
+    <h1>After we graphed all the data out, and then made some sketches for what the graphs for other environments would be, we decided that </h1>
     <br>
 
     <h1>   Interactive Fiction Rags to Riches.</h1>
