--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@ h1 {text-align: center;}
     <h1> For my third project in Scratch I did a platformer which has an octopus named Riccardo trying to escape an ocean which is becoming increasingly more polluted. The player uses Riccardo to jump through various obstacles using the w, a, s and d keys or arrow keys, and the background changes with new levels.</h1>
     <br>
     <h1> Project 4: Project Rover Phone Home </h1>
-    <img src = "Rover_data_graphs.png" height = "500">
+    <img src = "Rover_data_graphs.PNG" height = "500">
     <br>
-    <img src = "Rover_graphs.png" height = "500">
+    <img src = "Rover_graphs.PNG" height = "500">
     <br>
-    <img src = "Inland Forest.png" height = "500">
-    <h1>After we graphed all the data out, and then made some sketches for what the graphs for other environments would be, we decided that inland forests made the most sense. Though at first we thought that it might be marshlands, due to the fact that the sound seemed to more closely relate to animal chirps than wind howling, we ultimately decided that wind howling with thunderstorms would make more sense. Our other graphs for temperature and movement also matched, being very close to our sketches. The only ones which might not have matched is light, but we still felt confident knowing that the other graphs matched too well.</h1>
+    <img src = "Inland Forest.PNG" height = "500">
+    <h1>After we graphed all the data out, and then made some sketches for what the graphs for other environments would be, we decided that inland forests made the most sense. Though at first we thought that it might be marshlands, due to the fact that the sound seemed to more closely relate to animal chirps than wind howling, we ultimately decided that wind howling with thunderstorms would make more sense. Our other graphs for temperature and movement also matched, being very close to our sketches. The only ones which might not have matched is light, but we still felt confident knowing that the other graphs matched well.</h1>
     <br>
 
     <h1>   Interactive Fiction Rags to Riches.</h1>
