--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,17 @@ h1 {text-align: center;}
     <meta charset="utf-8">
     <title>Home Alone</title>
 </style>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">		  
 </head>
+		
 <body background = "" style="text-align:center" bgcolor="#FF8533">
+   <div class="w3-bar w3-black">
+     <a href="index.html" class="w3-bar-item w3-button">Home</a>
+     <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
+     <a href="aboutme.html" class="w3-bar-item w3-button">AboutMe</a>
+   </div>
+	
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
