--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,9 @@ h1 {text-align: center;}
     <h1>After we graphed all the data out, and then made some sketches for what the graphs for other environments would be, we decided that inland forests made the most sense. Though at first we thought that it might be marshlands, due to the fact that the sound seemed to more closely relate to animal chirps than wind howling, we ultimately decided that wind howling with thunderstorms would make more sense. Our other graphs for temperature and movement also matched, being very close to our sketches. The only ones which might not have matched is light, but we still felt confident knowing that the other graphs matched well.</h1>
     <br>
     <h1> Project 5: Honey Project </h1>
-    <img src = "" height = "500">
+    <img src = "high_graph.PNG" height = "500">
+    <img src = "medium_graph.PNG" height = "500">
+    <img src = "low_graph.PNG" height = "500">
 
     <h1>   Interactive Fiction Rags to Riches.</h1>
 
