--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@ h1 {text-align: center;}
     <img src = "Images/low_graph.PNG" height = "500" width = "700">
     <br>
     <h1> For this project we went and got data from a website called USDA on the production of honey in the states. We first filtered and organized the data of different years in the 2000's to plot different graphs. Then, we used these graphs to analyze and identify any patterns in honey production and the state of bee colonies. We concluded that honey production and human activity might have certain effects on bee colonies.</h1>
-
+    <br>
+    <img src = "Images/mammoth.PNG" height = "500">
 	  </body>
 	</html>
