--- a/portfolio.html
+++ b/portfolio.html
@@ -47,5 +47,7 @@ h1 {text-align: center;}
     <h1> For this project we went and got data from a website called USDA on the production of honey in the states. We first filtered and organized the data of different years in the 2000's to plot different graphs. Then, we used these graphs to analyze and identify any patterns in honey production and the state of bee colonies. We concluded that honey production and human activity might have certain effects on bee colonies.</h1>
     <br>
     <img src = "Images/mammoth.PNG" height = "500">
+    <br>
+    <h1> For this project, we looked at a simulation which showed the populations of mammoths and humans competing in the Americas. This simulation showed that the expansion of the human population, hunting, and climate change can lead to species’ such as the mammoth going extinct. During this time, we also considered how adding things such as the requirement of food, or disease for humans might affect the simulation.  </h1>
 	  </body>
 	</html>
