--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@ body {
   </head>
   <body background = "" style="text-align:center" bgcolor="#FFFFF">
     <nav>
-      <a href="index.html">Home at Last</a>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="aboutme.html">About Me</a>
+    <div class="w3-bar w3-black">
+     <a href="index.html" class="w3-bar-item w3-button">Home</a>
+     <a href="portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
+     <a href="aboutme.html" class="w3-bar-item w3-button">AboutMe</a>
+    </div>
       <h1>This is Andre's Home Page!</h1>
       <iframe width="1280" height="720" src="https://www.youtube.com/embed/EmOSk2wi0WI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </nav>
